# markov-chains

./: CMakeLists.txt  README.md
src/: main.cpp
